--- a/libs/openai-nodejs/package.json
+++ b/libs/openai-nodejs/package.json
@@ -9,7 +9,9 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@langchain/openai": "^0.3.2",
     "dotenv": "^16.4.5",
+    "langchain": "^0.3.2",
     "openai": "^4.63.0"
   },
   "devDependencies": {
