feat (openai-nodejs): document qa and youtube qa

--- a/libs/openai-nodejs/package.json
+++ b/libs/openai-nodejs/package.json
@@ -9,10 +9,15 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@langchain/community": "^0.3.3",
+    "@langchain/core": "^0.3.3",
     "@langchain/openai": "^0.3.2",
     "dotenv": "^16.4.5",
     "langchain": "^0.3.2",
-    "openai": "^4.63.0"
+    "openai": "^4.65.0",
+    "pdf-parse": "^1.1.1",
+    "youtube-transcript": "^1.2.1",
+    "youtubei.js": "^10.5.0"
   },
   "devDependencies": {
     "prettier": "^3.3.3"
