feat (openai-nodejs): Function calling

--- a/libs/openai-nodejs/package.json
+++ b/libs/openai-nodejs/package.json
@@ -12,6 +12,7 @@
     "@langchain/community": "^0.3.3",
     "@langchain/core": "^0.3.3",
     "@langchain/openai": "^0.3.2",
+    "advanced-calculator": "^1.1.1",
     "dotenv": "^16.4.5",
     "langchain": "^0.3.2",
     "openai": "^4.65.0",
