--- a/libs/openai-nextjs/package.json
+++ b/libs/openai-nextjs/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.6.3",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
